improve navigation, and configuration

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -11,7 +11,8 @@
 <center>
 <div class="page">
 	<div class="top">
-	<a href="{{ path('_admin') }}">Admin Home</a>
+	<a href="{{ path('_admin') }}">Admin Home</a>&nbsp;&nbsp;&nbsp;
+	<a href="{{ path('_admin_settings') }}">Admin Settings</a>
 	</div>
 	
 	<div class="content">
